cmake_minimum_required(VERSION 3.20)
project(premier)
if(MSVC)
add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
endif()
add_executable(premier King/main.cpp King/utils.cpp King/utils.hpp)
target_compile_features(premier PRIVATE cxx_std_17)
